# SignWriter

./: .gitignore  README.md  com.github.SamuelSchlemperSchlemuel.SingWriter.json  io.github.SamuelSchlemperSchlemuel.SingWriter.json  io.github.Samuel_Schlemper_Schlemuel.SignWriter.json  io.github.Samuel_Schlemper_Schlemuel.SingWriter.json  meson.build  signwriter.doap  singwriter.doap
.flatpak-builder/checksums/: x86_64-io.github.Samuel_Schlemper_Schlemuel.SignWriter.json  x86_64-io.github.Samuel_Schlemper_Schlemuel.SingWriter.json
data/: com.github.SamuelSchlemperSchlemuel.SingWriter.desktop.in  com.github.SamuelSchlemperSchlemuel.SingWriter.gschema.xml  com.github.SamuelSchlemperSchlemuel.SingWriter.metainfo.xml.in  io.github.SamuelSchlemperSchlemuel.SingWriter.desktop.in  io.github.SamuelSchlemperSchlemuel.SingWriter.gschema.xml  io.github.SamuelSchlemperSchlemuel.SingWriter.metainfo.xml.in  io.github.Samuel_Schlemper_Schlemuel.SignWriter.desktop.in  io.github.Samuel_Schlemper_Schlemuel.SignWriter.gschema.xml  io.github.Samuel_Schlemper_Schlemuel.SignWriter.metainfo.xml.in  io.github.Samuel_Schlemper_Schlemuel.SingWriter.desktop.in  io.github.Samuel_Schlemper_Schlemuel.SingWriter.gschema.xml  io.github.Samuel_Schlemper_Schlemuel.SingWriter.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  POTFILES.in  it_IT.po  meson.build  pt_BR.po  signwriter.pot  singwriter.pot
src/: main.py  meson.build  signwriter.gresource.xml  signwriter.in  singwriter.gresource.xml  singwriter.in  style.css  window.py  window.ui
src/gtk/: help-overlay.ui
(+16 files in other folders)
